<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_group_general"
        android:key="pref_key_storage_settings">

        <!--<SwitchPreference
            android:defaultValue="true"
            android:key="example_switch"
            android:summary="@string/pref_description_social_recommendations"
            android:title="@string/pref_title_social_recommendations" />-->

        <!-- NOTE: EditTextPreference accepts EditText attributes. -->
        <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_display_name"
            android:inputType="textCapWords"
            android:key="example_text"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_display_name" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_group_style"
        android:key="pref_key_storage_settings">
        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
                 dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
        <ListPreference
            android:defaultValue="@string/pref_default_date_format"
            android:entries="@array/pref_date_format_list_titles"
            android:entryValues="@array/pref_date_format_list_titles"
            android:key="date_format"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_date_format" />
    </PreferenceCategory>


</PreferenceScreen>
